[gd_scene load_steps=18 format=3 uid="uid://b7d7kfemno1ex"]

[ext_resource type="PackedScene" uid="uid://egfxblymqfqd" path="res://GameData/Maps/map.tscn" id="1_akvmk"]
[ext_resource type="Script" uid="uid://djsr0kjgwaton" path="res://GameData/MainScenes/Scripts/game_scene.gd" id="1_g2kuy"]
[ext_resource type="Script" uid="uid://4eacfeat0kea" path="res://GameData/MainScenes/Scripts/ui.gd" id="3_ibdpl"]
[ext_resource type="StyleBox" uid="uid://5vfbp6tawj1m" path="res://Resources/Inventory/inventory_bg.tres" id="4_syms3"]
[ext_resource type="Script" uid="uid://cpe4nt5gmn0y2" path="res://GameData/UIScenes/Inventory/Scripts/inventory_ui.gd" id="5_waasu"]
[ext_resource type="Resource" uid="uid://cin7we6rrg05o" path="res://GameData/UIScenes/Inventory/test_inventory.tres" id="6_nh22g"]
[ext_resource type="Texture2D" uid="uid://b6ltkudoulh6l" path="res://Assets/Icons/play.png" id="7_674w2"]
[ext_resource type="Texture2D" uid="uid://cjwamwf662cid" path="res://Assets/Icons/pause.png" id="8_a0jnf"]
[ext_resource type="Texture2D" uid="uid://djt7tufi2ucng" path="res://Assets/Icons/fastForward.png" id="9_clpeu"]
[ext_resource type="FontVariation" uid="uid://b1rvyi5eh08vx" path="res://Resources/Fonts/kfn_50_o1.tres" id="10_0h1f8"]
[ext_resource type="PackedScene" uid="uid://iq7vcv16hyni" path="res://GameData/UIScenes/GUI/tower_button.tscn" id="11_s26dc"]
[ext_resource type="FontVariation" uid="uid://yac1636nknky" path="res://Resources/Fonts/kfn_30_o1.tres" id="11_sl8sw"]
[ext_resource type="Texture2D" uid="uid://br7enwm10hpjq" path="res://Assets/Icons/home.png" id="12_jvyjn"]
[ext_resource type="Texture2D" uid="uid://b4p4546v03cif" path="res://Assets/UI/HPbar.jpg" id="13_541wh"]
[ext_resource type="Script" uid="uid://bx21dqt1eoy44" path="res://GameData/UIScenes/GUI/Scripts/baddy_info.gd" id="15_dts4o"]
[ext_resource type="Theme" uid="uid://bp5hjnce415xl" path="res://Resources/Fonts/infopopup_font_12.tres" id="15_wrp27"]
[ext_resource type="PackedScene" uid="uid://bfclp7iyn1iv8" path="res://GameData/UIScenes/GUI/game_start_info.tscn" id="17_nh22g"]

[node name="GameScene" type="Node2D" node_paths=PackedStringArray("ui", "build_bar", "inventory_ui", "baddy_info_foldable", "pause_button", "game_bookend_popup", "map_node", "path_debug")]
script = ExtResource("1_g2kuy")
ui = NodePath("UI")
build_bar = NodePath("UI/HUD/BuildBar")
inventory_ui = NodePath("UI/HUD/BuildBar/InventoryContainer/InventoryGrid")
baddy_info_foldable = NodePath("UI/HUD/BaddyInfo")
pause_button = NodePath("UI/HUD/InfoBar/MarginContainer/GameControls/PausePlay")
game_bookend_popup = NodePath("UI/HUD/GameBookendInfo")
map_node = NodePath("Map")
path_debug = NodePath("PathDebug")
player_cash = 30

[node name="Map" parent="." instance=ExtResource("1_akvmk")]

[node name="PathDebug" type="Line2D" parent="."]
width = 5.0
default_color = Color(0, 0, 0, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="UI" type="CanvasLayer" parent="." node_paths=PackedStringArray("hp_bar", "hp_text", "cash_display", "game_message", "baddy_info_foldbable", "baddy_info")]
script = ExtResource("3_ibdpl")
hp_bar = NodePath("HUD/InfoBar/InfoContainer/HealthBar")
hp_text = NodePath("HUD/InfoBar/InfoContainer/HealthBar/HealthAmount")
cash_display = NodePath("HUD/InfoBar/InfoContainer/Money")
game_message = NodePath("HUD/GameMessage")
baddy_info_foldbable = NodePath("HUD/BaddyInfo")
baddy_info = NodePath("HUD/BaddyInfo/VBoxContainer")

[node name="HUD" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
mouse_filter = 2

[node name="BuildBar" type="ColorRect" parent="UI/HUD"]
custom_minimum_size = Vector2(1280, 100)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -640.0
offset_top = -200.0
offset_right = 640.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2
color = Color(1, 1, 1, 0)

[node name="InventoryContainer" type="PanelContainer" parent="UI/HUD/BuildBar"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -160.0
offset_right = 128.0
grow_vertical = 0
mouse_filter = 2
theme_override_styles/panel = ExtResource("4_syms3")

[node name="InventoryGrid" type="GridContainer" parent="UI/HUD/BuildBar/InventoryContainer" node_paths=PackedStringArray("game_scene")]
layout_mode = 2
mouse_filter = 2
columns = 3
script = ExtResource("5_waasu")
data = ExtResource("6_nh22g")
game_scene = NodePath("../../../../..")

[node name="HBoxContainer" type="HBoxContainer" parent="UI/HUD/BuildBar"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -280.0
offset_top = -144.0
offset_right = 95.0
offset_bottom = -64.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_constants/separation = 150
alignment = 1

[node name="TowerBase" parent="UI/HUD/BuildBar/HBoxContainer" instance=ExtResource("11_s26dc")]
show_behind_parent = true
z_index = -1
layout_mode = 2
slot_count = 3
slot_radius = 64.0

[node name="TowerBase2" parent="UI/HUD/BuildBar/HBoxContainer" instance=ExtResource("11_s26dc")]
show_behind_parent = true
z_index = -1
layout_mode = 2
slot_count = 4
slot_radius = 64.0

[node name="InfoBar" type="ColorRect" parent="UI/HUD"]
self_modulate = Color(0, 0, 0, 0.470588)
custom_minimum_size = Vector2(0, 60)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 60.0
grow_horizontal = 2

[node name="InfoContainer" type="HBoxContainer" parent="UI/HUD/InfoBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 272.0
grow_horizontal = 2
grow_vertical = 2

[node name="Symbol" type="Label" parent="UI/HUD/InfoBar/InfoContainer"]
custom_minimum_size = Vector2(120, 60)
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.705882)
theme_override_fonts/font = ExtResource("10_0h1f8")
theme_override_font_sizes/font_size = 50
text = "$"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Money" type="Label" parent="UI/HUD/InfoBar/InfoContainer"]
custom_minimum_size = Vector2(120, 60)
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.705882)
theme_override_fonts/font = ExtResource("11_sl8sw")
theme_override_font_sizes/font_size = 30
vertical_alignment = 1

[node name="HealthIcon" type="TextureRect" parent="UI/HUD/InfoBar/InfoContainer"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
size_flags_horizontal = 10
texture = ExtResource("12_jvyjn")

[node name="HealthBar" type="TextureProgressBar" parent="UI/HUD/InfoBar/InfoContainer"]
custom_minimum_size = Vector2(400, 30)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
value = 100.0
nine_patch_stretch = true
texture_under = ExtResource("13_541wh")
texture_progress = ExtResource("13_541wh")
tint_under = Color(0.215686, 0.215686, 0.215686, 1)
tint_progress = Color(0, 0.658824, 0, 1)

[node name="HealthAmount" type="Label" parent="UI/HUD/InfoBar/InfoContainer/HealthBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "100/100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control" type="Control" parent="UI/HUD/InfoBar/InfoContainer"]
custom_minimum_size = Vector2(70, 0)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="UI/HUD/InfoBar"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -82.0
offset_right = 82.0
offset_bottom = 90.0
grow_horizontal = 2
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="GameControls" type="HBoxContainer" parent="UI/HUD/InfoBar/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8

[node name="PausePlay" type="TextureButton" parent="UI/HUD/InfoBar/MarginContainer/GameControls"]
process_mode = 3
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
toggle_mode = true
texture_normal = ExtResource("7_674w2")
texture_pressed = ExtResource("8_a0jnf")
ignore_texture_size = true
stretch_mode = 0

[node name="FastForward" type="TextureButton" parent="UI/HUD/InfoBar/MarginContainer/GameControls"]
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("9_clpeu")
ignore_texture_size = true
stretch_mode = 0

[node name="BaddyInfo" type="FoldableContainer" parent="UI/HUD"]
layout_mode = 1
offset_top = 24.0
offset_right = 275.0
offset_bottom = 185.0
size_flags_horizontal = 3
mouse_filter = 2
folded = true
title = "Baddy Info"
script = ExtResource("15_dts4o")
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="UI/HUD/BaddyInfo"]
visible = false
layout_mode = 2
theme = ExtResource("15_wrp27")

[node name="Name" type="Label" parent="UI/HUD/BaddyInfo/VBoxContainer"]
layout_mode = 2
accessibility_name = "Name"
theme_override_font_sizes/font_size = 12

[node name="MaxHealth" type="Label" parent="UI/HUD/BaddyInfo/VBoxContainer"]
layout_mode = 2

[node name="Damage" type="Label" parent="UI/HUD/BaddyInfo/VBoxContainer"]
layout_mode = 2

[node name="Defence" type="Label" parent="UI/HUD/BaddyInfo/VBoxContainer"]
layout_mode = 2

[node name="MoveSpeed" type="Label" parent="UI/HUD/BaddyInfo/VBoxContainer"]
layout_mode = 2

[node name="Description" type="Label" parent="UI/HUD/BaddyInfo/VBoxContainer"]
layout_mode = 2

[node name="GameBookendInfo" parent="UI/HUD" instance=ExtResource("17_nh22g")]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5

[node name="GameMessage" type="Label" parent="UI/HUD"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -86.0
offset_top = -51.5
offset_right = 86.0
offset_bottom = 51.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 1, 0.78431374)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 75

[connection signal="pressed" from="UI/HUD/InfoBar/MarginContainer/GameControls/PausePlay" to="." method="pause_resume_game"]
[connection signal="pressed" from="UI/HUD/InfoBar/MarginContainer/GameControls/FastForward" to="." method="_on_fast_forward_pressed"]
